tests/ast_interpreter/err_string_index_negative.expected
<string>:3:11: error: index cannot be negative
    print(str[-1]);
          ^^^^^^^
