tests/ast_interpreter/err_string_index_negative.nx
fun main() {
    var str = "hello";
    print(str[-1]);
}